--- a/mi-aplicacion/src/pages/LandingPage/components/BuyHomes.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/BuyHomes.css
@@ -61,3 +61,43 @@
 .buyhomes-container button {
     opacity: 0;
 }
+
+
+
+/**/
+@media screen and (max-width: 820px) {
+    .buyhomes-wrapper {
+      padding: 0 1rem;
+      height: auto;
+      min-height: 80vh;
+    }
+    
+    .buyhomes-container {
+      height: 80vh;
+      /* border-radius: 15%; */
+      border-radius: 20% 20% 20% 20% / 15% 15% 15% 15%;
+    }
+    
+    .buyhomes-container h1 {
+      font-size: 2.5rem;
+      padding: 0 1rem;
+    }
+  }
+  
+  /* Para teléfonos muy pequeños */
+  @media screen and (max-width: 480px) {
+    .buyhomes-wrapper {
+      padding: 0 1rem;
+    }
+    
+    .buyhomes-container {
+      height: 80vh;
+      /* border-radius: 0%; */
+      border-radius: 50% 50% 50% 50% / 25% 25% 25% 25%; 
+    }
+    
+    .buyhomes-container h1 {
+      font-size: 2rem;
+      padding: 0 0.8rem;
+    }
+  }
