--- a/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/CarouselLocation.css
@@ -211,3 +211,92 @@
   .carousel-container.visible .carousel-item:nth-child(10) .image-container img {
     transition-delay: 1s;
   }
+
+
+
+
+  /* Media queries para dispositivos móviles */
+@media screen and (max-width: 820px) {
+  .carousel-container {
+    padding-bottom: 3rem;
+    padding-top: 0.5rem;
+  }
+  
+  .carousel-wrapper {
+    margin-left: 1.5rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    overflow-x: auto; /* Permitir scroll horizontal en móvil */
+  }
+  
+  .carousel-item {
+    flex: 0 0 calc(40% - 16px); /* Mostrar menos elementos por vista */
+    min-width: calc(40% - 16px);
+  }
+
+  .carousel-navigation {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+    position: absolute;
+    margin-right: 1.5rem;
+    bottom: 33rem; 
+    left: 0;
+    right: 0;
+}
+  
+  .carousel-location {
+    padding: 0rem 1.5rem;
+  }
+  
+  .carousel-location h3 {
+    font-size: 1.6rem;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+  }
+}
+
+/* Para teléfonos muy pequeños */
+@media screen and (max-width: 480px) {
+  .carousel-wrapper {
+    margin-left: 1rem;
+    gap: 30px;
+  }
+  
+  .carousel-item {
+    flex: 0 0 calc(65% - 16px); /* Casi pantalla completa en móviles pequeños */
+    min-width: calc(65% - 16px);
+  }
+  
+  .carousel-content {
+    gap: 20px;
+  }
+  
+  .carousel-location {
+    padding: 0rem 1rem;
+  }
+  
+  .carousel-location h3 {
+    font-size: 1.4rem;
+  }
+
+  .carousel-navigation {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+    position: absolute;
+    margin-right: 1rem;
+    bottom: 35rem; 
+    left: 0;
+    right: 0;
+}
+  
+  .carousel-button {
+    width: 35px;
+    height: 35px;
+  }
+}
