--- a/mi-aplicacion/src/pages/LandingPage/components/InmoLocation.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/InmoLocation.css
@@ -27,7 +27,6 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    /* justify-content: flex-start; */
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -60,14 +59,9 @@
     color: var(--dark-color);
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-transform: uppercase;
-    /* margin: 0;
-    padding-top: 1rem;
-    padding-bottom: 3rem;
-    border-bottom: 1px solid var(--dark-color); */
 }
 
 .inmolocation-left h3 {
-    /* padding-top: 3rem; */
     font-size: 1.1rem;
     font-weight: 100;
     width: 80%;
@@ -78,12 +72,10 @@
 @keyframes fadeIn {
     0% {
         opacity: 0;
-        /* transform: translateY(40px); */
     }
 
     100% {
         opacity: 1;
-        /* transform: translateY(0); */
     }
 }
 
@@ -92,10 +84,6 @@
 .inmolocation-right {
     flex: 1;
     display: flex;
-    /* align-items: flex-end;
-    flex-direction: column;
-    justify-content: center; */
-
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -130,5 +118,71 @@
         opacity: 1;
         transform: translateY(0);
         filter: blur(0);
+    }
+}
+
+
+/* Media queries para dispositivos móviles */
+@media screen and (max-width: 820px) {
+    .inmolocation-inner {
+        flex-direction: column;
+        margin-left: 1.5rem;
+        margin-right: 1.5rem;
+        gap: 1.5rem;
+        padding-top: 1.5rem;
+        padding-bottom: 3rem;
+    }
+
+    .inmolocation-right {
+        order: -1;
+        /* Mueve la parte derecha (imagen) arriba */
+    }
+
+    .inmolocation-right img {
+        max-width: 100%;
+        aspect-ratio: 1 / 1;
+        /* Hace que la imagen sea cuadrada */
+        object-fit: cover;
+    }
+
+    .inmolocation-left h1 {
+        font-size: 2.5rem;
+        margin-top: 4rem;
+    }
+
+    .inmolocation-left h3 {
+        width: 100%;
+        font-size: 1rem;
+        margin-bottom: 2rem;
+        border-top: 1px solid var(--dark-color);
+        padding-top: 3rem;
+    }
+
+    .section-inmolocation {
+        padding-top: 4rem;
+    }
+}
+
+/* Para teléfonos muy pequeños */
+@media screen and (max-width: 480px) {
+    .inmolocation-inner {
+        margin-left: 1rem;
+        margin-right: 1rem;
+        padding-top: 1rem;
+        gap: 1rem;
+    }
+
+    .inmolocation-left h1 {
+        margin-top: 4rem;
+        font-size: 2rem;
+        margin-bottom: 1.5rem;
+
+    }
+
+    .inmolocation-left h3 {
+        border-top: 1px solid var(--dark-color);
+        padding-top: 1.5rem;
+        font-size: 0.9rem;
+        margin-bottom: 0rem;
     }
 }
