--- a/mi-aplicacion/src/pages/LandingPage/components/Welcome.css
+++ b/mi-aplicacion/src/pages/LandingPage/components/Welcome.css
@@ -49,3 +49,34 @@
   animation: fadeIn 1s ease-out forwards;
   animation-delay: 0.5s;
 }
+
+/**/
+@media screen and (max-width: 768px) {
+  .landing-container h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.8rem;
+    /* width: 95%; */
+  }
+  
+  .landing-container h3 {
+    font-size: 1rem;
+    text-align: center;
+    width: 60%;
+  }
+}
+
+/* Para teléfonos muy pequeños */
+@media screen and (max-width: 480px) {
+  .landing-container h1 {
+    font-size: 2rem;
+    margin-bottom: 0.6rem;
+  }
+  
+  .landing-container h3 {
+    font-size: 0.9rem;
+  }
+  
+  .landing-container {
+    padding: 0 15px;
+  }
+}
